# 3D-Renderer

./: CMakeLists.txt  README.md
src/: aliases.h  application.cpp  application.h  linalg.h  main.cpp
src/controller/: application.cpp  application.h
src/model/: camera.cpp  camera.h  color.cpp  color.h  entity.cpp  entity.h  frame.cpp  frame.h  light.h  object.cpp  object.h  position.cpp  position.h  property.h  rasterizer.cpp  rasterizer.h  renderer.cpp  renderer.h  spectator.cpp  spectator.h  triangle.cpp  triangle.h  world.cpp  world.h  zbuffer.cpp  zbuffer.h
src/model/utility/: object_util.cpp  object_util.h  simple_obj_parse.cpp  simple_obj_parse.h
src/utility/: cmd_parser.cpp  cmd_parser.h  except.cpp  except.h
src/view/: BufferRasterizer.cpp  BufferRasterizer.h  frame.h  rasterizer.cpp  rasterizer.h  renderer.h  screen.cpp  screen.h
